--- a/msix-src/render.yml
+++ b/msix-src/render.yml
@@ -2,5 +2,5 @@
 uhfHeaderId: MSDocsHeader-WinUWP
 searchScope:
   - UWP
-breadcrumb_path: ./breadcrumb.json
-toc_rel: ./toc.yml  
+breadcrumb_path: ./breadcrumb/toc.json
+toc_rel: ./toc.json  
