Updated UHF path
Added MSDocsHeader-MSIX to replace UWP version

--- a/render.yml
+++ b/render.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ContextObject
-uhfHeaderId: MSDocsHeader-WinUWP
+uhfHeaderId: MSDocsHeader-MSIX
 searchScope:
   - UWP
 breadcrumb_path: ./breadcrumb.json
