--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -11,7 +11,6 @@
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
-        "ContextObject": "Toc",
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
@@ -22,7 +21,7 @@
   "sync_notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
-  "need_preview_pull_request": false,
+  "need_preview_pull_request": true,
   "contribution_branch_mappings": {},
   "dependent_repositories": [
     {
@@ -33,5 +32,6 @@
     }
   ],
   "branch_target_mapping": {},
-  "need_generate_pdf_url_template": false
+  "need_generate_pdf_url_template": false,
+  "targets": {}
 }
