--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -43,6 +43,8 @@
       href: packaging-tool/bundle-msix-packages.md
     - name: Duplicate MSIX Packaging Tool settings across multiple devices
       href: packaging-tool/duplicate-mpt-settings-across-devices.md
+    - name: Remote machine conversions
+      href: packaging-tool/remote-conversion-setup.md
     - name: MSIX Packaging Tool Insider Program
       href: packaging-tool/insider-program.md
     - name: Modification packages
