--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -137,7 +137,7 @@
     - name: Test your Windows app for Windows 10 in S mode
       href: https://docs.microsoft.com/windows/uwp/porting/desktop-to-uwp-test-windows-s?context=/windows/msix/render
 - name: Distribute
-  items: 
+  items:
     - name: Publish to the Microsoft Store
       href: https://docs.microsoft.com/windows/uwp/publish/?context=/windows/msix/render
     - name: Publish to the Microsoft Store for Business
@@ -146,6 +146,8 @@
       href: https://docs.microsoft.com/windows/uwp/packaging/appinstaller-root?context=/windows/msix/render
 - name: Manage
   items: 
+    - name: Troubleshoot MSIX Container
+      href: manage/troubleshoot-msix-container.md
     - name: Deployment Imaging Service Management
       href: https://docs.microsoft.com/windows-hardware/manufacture/desktop/what-is-dism?context=/windows/msix/render
     - name: Windows PowerShell
