--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -50,5 +50,8 @@
     ]
   },
   "need_generate_pdf_url_template": true,
-  "targets": {}
+  "targets": {
+    "pdf": {
+      "template_folder": "_themes.pdf"
+    },
 }
